--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
-name = "examplepyapp"
-description = "Example Python repo for neutrons"
+name = "bm3dornl"
+description = "BM3D repo"
 dynamic = ["version"]
 requires-python = ">=3.10"
 dependencies = [
@@ -36,7 +36,7 @@ dirty = "{version}+d{build_date:%Y%m%d}"
 distance-dirty = "{next_version}.dev{distance}+d{build_date:%Y%m%d%H%M}"
 
 [tool.versioningit.write]
-file = "src/packagenamepy/_version.py"
+file = "src/bm3dornl/_version.py"
 
 [tool.setuptools.packages.find]
 where = ["src"]
