add pytest marker for gpu test

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -59,7 +59,7 @@ testpaths = ["tests"]
 python_files = ["test*.py"]
 norecursedirs = [".git", "tmp*", "_tmp*", "__pycache__", "*dataset*", "*data_set*"]
 markers = [
-    "mymarker: example markers goes here"
+    "cuda_required: test requires cuda to run."
 ]
 
 [tool.pylint]
