--- a/.github/workflows/unittest.yml
+++ b/.github/workflows/unittest.yml
@@ -29,7 +29,7 @@ jobs:
       - name: run unit tests
         run: |
           echo "running unit tests"
-          python -m pytest --cov=src --cov-report=xml --cov-report=term-missing -m "not cuda_required" tests/
+          python -m pytest --cov=src --cov-report=xml --cov-report=term-missing -m "not cuda_required"
       - name: upload coverage to codecov
         uses: codecov/codecov-action@v4
         with:
