--- a/.github/workflows/unittest.yml
+++ b/.github/workflows/unittest.yml
@@ -28,7 +28,7 @@ jobs:
           echo "installing additional dependencies if cannot be installed from conda"
       - name: run unit tests
         run: |
-          echo "running unit tests"
+          echo "running unit tests (CPU)"
           python -m pytest --cov=src --cov-report=xml --cov-report=term-missing -m "not cuda_required"
       - name: upload coverage to codecov
         uses: codecov/codecov-action@v4
@@ -44,3 +44,26 @@ jobs:
           CHANNELS="--channel mantid/label/main --channel conda-forge"
           VERSION=$(versioningit ../) conda mambabuild $CHANNELS --output-folder . .
           conda verify noarch/bm3dornl*.tar.bz2
+
+  linux_gpu:
+    runs-on: github-gpu-builder
+    defaults:
+      run:
+        shell: bash -l {0}
+    steps:
+      - uses: actions/checkout@v3
+      - uses: conda-incubator/setup-miniconda@v2
+        with:
+          auto-update-conda: true
+          channels: conda-forge,defaults
+          mamba-version: "*"
+          environment-file: environment.yml
+          cache-environment-key: ${{ runner.os }}-env-${{ hashFiles('**/environment.yml') }}
+          cache-downloads-key: ${{ runner.os }}-downloads-${{ hashFiles('**/environment.yml') }}
+      - name: install additional dependencies
+        run: |
+          echo "installing additional dependencies if cannot be installed from conda"
+      - name: run unit tests
+        run: |
+          echo "running unit tests (GPU)"
+          python -m pytest --cov=src --cov-report=xml --cov-report=term-missing -m "cuda_required"
