--- a/.github/workflows/unittest.yml
+++ b/.github/workflows/unittest.yml
@@ -54,6 +54,7 @@ jobs:
       - uses: actions/checkout@v3
       - uses: conda-incubator/setup-miniconda@v2
         with:
+          auto-activate-base: true
           auto-update-conda: true
           channels: conda-forge,defaults
           mamba-version: "*"
