--- a/.github/workflows/unittest.yml
+++ b/.github/workflows/unittest.yml
@@ -54,7 +54,7 @@ jobs:
       - uses: actions/checkout@v3
       - uses: conda-incubator/setup-miniconda@v2
         with:
-          auto-activate-base: true
+          miniforge-version: "latest"
           auto-update-conda: true
           channels: conda-forge,defaults
           mamba-version: "*"
