config sphinx and add api docs

--- a/environment.yml
+++ b/environment.yml
@@ -28,6 +28,9 @@ dependencies:
   - libmamba
   - libarchive
   - python-build
+  # doc
+  - sphinx
+  - sphinx_rtd_theme
   # test
   - pytest
   - pytest-cov
