--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,15 +1,23 @@
 [project]
 name = "bm3dornl"
-description = "BM3D repo"
+description = "BM3D for streak artifact removal in neutron imaging"
 dynamic = ["version"]
 requires-python = ">=3.10"
 dependencies = [
-  # list all runtime dependencies here
+  "numpy",
+  "scipy<1.13",  # avoid a bug
+  "numba",
+  "cupy-cuda12x",  # use pre-built wheels
+  "scikit-image",
 ]
 license = { text = "MIT" }
+keywords = ["BM3D", "image processing", "neutron imaging", "denoising", "CuPy", "Numba"]
 
 [project.urls]
-homepage = "https://github.com/neutrons/python_project_template/"  # if no homepage, use repo url
+homepage = "https://github.com/neutrons/python_project_template/"
+repository = "https://github.com/ornlneutronimaging/bm3dornl"
+documentation = "https://bm3dornl.readthedocs.io/en/latest/"
+issues = "https://github.com/ornlneutronimaging/bm3dornl/issues"
 
 [build-system]
 requires = [
@@ -70,5 +78,3 @@ disable = ["too-many-locals",
            "too-many-arguments",
            "duplicate-code"
 ]
-
-# Add additional 3rd party tool configuration here as needed
