--- a/.github/workflows/unittest.yml
+++ b/.github/workflows/unittest.yml
@@ -15,14 +15,13 @@ jobs:
         shell: bash -l {0}
     steps:
       - uses: actions/checkout@v3
-      - uses: conda-incubator/setup-miniconda@v2
+      - uses: conda-incubator/setup-miniconda@v3
         with:
           auto-update-conda: true
           channels: conda-forge,defaults
-          mamba-version: "*"
+          use-mamba: true
           environment-file: environment.yml
-          cache-environment-key: ${{ runner.os }}-env-${{ hashFiles('**/environment.yml') }}
-          cache-downloads-key: ${{ runner.os }}-downloads-${{ hashFiles('**/environment.yml') }}
+          activate-environment: test
       - name: install additional dependencies
         run: |
           echo "installing additional dependencies if cannot be installed from conda"
@@ -52,15 +51,14 @@ jobs:
         shell: bash -l {0}
     steps:
       - uses: actions/checkout@v3
-      - uses: conda-incubator/setup-miniconda@v2
+      - uses: conda-incubator/setup-miniconda@v3
         with:
           miniforge-version: "latest"
           auto-update-conda: true
           channels: conda-forge,defaults
-          mamba-version: "*"
+          use-mamba: true
           environment-file: environment.yml
-          cache-environment-key: ${{ runner.os }}-env-${{ hashFiles('**/environment.yml') }}
-          cache-downloads-key: ${{ runner.os }}-downloads-${{ hashFiles('**/environment.yml') }}
+          activate-environment: test
       - name: install additional dependencies
         run: |
           echo "installing additional dependencies if cannot be installed from conda"
