--- a/.github/workflows/unittest.yml
+++ b/.github/workflows/unittest.yml
@@ -44,25 +44,25 @@ jobs:
           VERSION=$(versioningit ../) conda mambabuild $CHANNELS --output-folder . .
           conda verify noarch/bm3dornl*.tar.bz2
 
-  linux_gpu:
-    runs-on: github-gpu-builder
-    defaults:
-      run:
-        shell: bash -l {0}
-    steps:
-      - uses: actions/checkout@v4
-      - uses: conda-incubator/setup-miniconda@v3
-        with:
-          miniforge-version: "latest"
-          auto-update-conda: true
-          channels: conda-forge,defaults
-          use-mamba: true
-          environment-file: environment.yml
-          activate-environment: test
-      - name: install additional dependencies
-        run: |
-          echo "installing additional dependencies if cannot be installed from conda"
-      - name: run unit tests
-        run: |
-          echo "running unit tests (GPU)"
-          python -m pytest --cov=src --cov-report=xml --cov-report=term-missing -m "cuda_required"
+  # linux_gpu:
+  #   runs-on: github-gpu-builder
+  #   defaults:
+  #     run:
+  #       shell: bash -l {0}
+  #   steps:
+  #     - uses: actions/checkout@v4
+  #     - uses: conda-incubator/setup-miniconda@v3
+  #       with:
+  #         miniforge-version: "latest"
+  #         auto-update-conda: true
+  #         channels: conda-forge,defaults
+  #         use-mamba: true
+  #         environment-file: environment.yml
+  #         activate-environment: test
+  #     - name: install additional dependencies
+  #       run: |
+  #         echo "installing additional dependencies if cannot be installed from conda"
+  #     - name: run unit tests
+  #       run: |
+  #         echo "running unit tests (GPU)"
+  #         python -m pytest --cov=src --cov-report=xml --cov-report=term-missing -m "cuda_required"
