Feat: Implement Rust-based BM3D core with colored noise support

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,8 +6,6 @@ requires-python = ">=3.10"
 dependencies = [
   "numpy",
   "scipy",
-  "numba",
-  "cupy-cuda12x",  # use pre-built wheels
   "scikit-image",
 ]
 license = { text = "MIT" }
@@ -22,13 +20,14 @@ issues = "https://github.com/ornlneutronimaging/bm3dornl/issues"
 
 
 [build-system]
-requires = [
-  "setuptools >= 40.6.0",
-  "wheel",
-  "toml",
-  "versioningit"
-]
-build-backend = "setuptools.build_meta"
+requires = ["maturin>=1.0,<2.0"]
+build-backend = "maturin"
+
+[tool.maturin]
+features = ["pyo3/extension-module"]
+module-name = "bm3dornl.bm3d_rust"
+manifest-path = "src/rust_core/Cargo.toml"
+python-source = "src"
 
 [tool.black]
 line-length = 119
@@ -80,3 +79,23 @@ disable = ["too-many-locals",
            "too-many-arguments",
            "duplicate-code"
 ]
+
+[tool.pixi.workspace]
+channels = ["conda-forge"]
+platforms = ["osx-arm64"]
+
+[tool.pixi.pypi-dependencies]
+bm3dornl = { path = ".", editable = true }
+
+[tool.pixi.tasks]
+
+[tool.pixi.dependencies]
+python = "3.12.*"
+maturin = ">=1.11.2,<2"
+pytest = ">=9.0.2,<10"
+numpy = "1.26.*"
+pip = ">=25.3,<26"
+setuptools = ">=80.9.0,<81"
+h5py = ">=3.15.1,<4"
+matplotlib = ">=3.10.8,<4"
+jupyter = ">=1.1.1,<2"
