Add benchmarks for BM3D core operations and integrate Criterion for performance testing
- Updated Cargo.toml to include Criterion and rand as dev-dependencies.
- Created a new benchmark file `bm3d_benchmarks.rs` for testing BM3D core functionalities.
- Implemented FFT and WHT functions, block matching, and streak profile estimation in the benchmark file.
- Added various benchmark tests for FFT, WHT, block matching, and the full BM3D pipeline.

--- a/src/rust_core/Cargo.toml
+++ b/src/rust_core/Cargo.toml
@@ -13,3 +13,14 @@ numpy = "0.20"
 ndarray = "0.15"
 rayon = "1.8"
 rustfft = "6.2"
+
+[dev-dependencies]
+criterion = { version = "0.5", features = ["html_reports"] }
+rand = "0.8"
+
+[[bench]]
+name = "bm3d_benchmarks"
+harness = false
+# Benchmark builds against rlib, but we only have cdylib.
+# This benchmark file imports its own implementations.
+required-features = []
