--- a/src/rust_core/Cargo.toml
+++ b/src/rust_core/Cargo.toml
@@ -1,26 +1,8 @@
-[package]
-name = "bm3d_rust"
-version = "0.1.0"
-edition = "2021"
+[workspace]
+members = ["crates/bm3d_core", "crates/bm3d_python"]
+resolver = "2"
 
-[lib]
-name = "bm3d_rust"
-crate-type = ["cdylib"]
-
-[dependencies]
-pyo3 = { version = "0.20", features = ["extension-module"] }
-numpy = "0.20"
+[workspace.dependencies]
 ndarray = "0.15"
 rayon = "1.8"
 rustfft = "6.2"
-
-[dev-dependencies]
-criterion = { version = "0.5", features = ["html_reports"] }
-rand = "0.8"
-
-[[bench]]
-name = "bm3d_benchmarks"
-harness = false
-# Benchmark builds against rlib, but we only have cdylib.
-# This benchmark file imports its own implementations.
-required-features = []
