Add support for f64 precision in BM3D algorithms and Python bindings
- Refactor core BM3D functions to support both f32 and f64 types using a generic Bm3dFloat trait.
- Implement f64 variants for hard thresholding and Wiener filtering for both 2D images and 3D stacks.
- Enhance Python bindings to expose new f64 functions, ensuring compatibility with NumPy float64 arrays.
- Introduce integration tests for f64 precision to verify dtype preservation and numerical correctness against f32 results.
- Update existing tests to include checks for f64 functionality and ensure consistent behavior across precision types.

--- a/src/rust_core/crates/bm3d_core/Cargo.toml
+++ b/src/rust_core/crates/bm3d_core/Cargo.toml
@@ -10,6 +10,7 @@ crate-type = ["rlib"]
 
 [dependencies]
 ndarray = { workspace = true }
+num-traits = "0.2"
 rayon = { workspace = true }
 rustfft = { workspace = true }
 
