--- a/src/rust_core/crates/bm3d_core/Cargo.toml
+++ b/src/rust_core/crates/bm3d_core/Cargo.toml
@@ -13,6 +13,7 @@ ndarray = { workspace = true }
 num-traits = "0.2"
 rayon = { workspace = true }
 rustfft = { workspace = true }
+splines = "4.3"
 
 [dev-dependencies]
 criterion = { version = "0.5", features = ["html_reports"] }
