--- a/pyproject.toml
+++ b/pyproject.toml
@@ -89,6 +89,8 @@ test = { depends-on = ["test-rust", "test-python"] }
 bench = "python benchmarks/measure_stack_speed.py"
 bench-rust = { cmd = "cargo bench -p bm3d_core", cwd = "src/rust_core" }
 clean = "cargo clean --manifest-path src/rust_core/Cargo.toml"
+gui = { cmd = "bash -c 'RUSTFLAGS=\"-C link-args=-Wl,-rpath,$HDF5_DIR/lib\" cargo run --release -p bm3d_gui_egui'", cwd = "src/rust_core" }
+gui-debug = { cmd = "bash -c 'RUSTFLAGS=\"-C link-args=-Wl,-rpath,$HDF5_DIR/lib\" cargo run -p bm3d_gui_egui'", cwd = "src/rust_core" }
 
 [tool.pixi.dependencies]
 python = "3.12.*"
@@ -100,3 +102,8 @@ setuptools = ">=80.9.0,<81"
 h5py = ">=3.15.1,<4"
 matplotlib = ">=3.10.8,<4"
 jupyter = ">=1.1.1,<2"
+hdf5 = ">=1.14.0"
+pkg-config = "*"
+
+[tool.pixi.activation.env]
+HDF5_DIR = "$CONDA_PREFIX"
