--- a/src/rust_core/Cargo.toml
+++ b/src/rust_core/Cargo.toml
@@ -1,8 +1,14 @@
 [workspace]
-members = ["crates/bm3d_core", "crates/bm3d_python"]
+members = ["crates/bm3d_core", "crates/bm3d_python", "crates/bm3d_gui_egui"]
 resolver = "2"
 
 [workspace.dependencies]
 ndarray = "0.15"
 rayon = "1.8"
 rustfft = "6.2"
+
+# Release profile with maximum optimizations
+[profile.release]
+opt-level = 3
+lto = "thin"
+codegen-units = 1
