--- a/src/rust_core/crates/bm3d_core/Cargo.toml
+++ b/src/rust_core/crates/bm3d_core/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "bm3d_core"
-version = "0.1.0"
-edition = "2021"
+version.workspace = true
+edition.workspace = true
 description = "Pure Rust BM3D denoising algorithm core"
 
 [lib]
