--- a/src/rust_core/crates/bm3d_core/Cargo.toml
+++ b/src/rust_core/crates/bm3d_core/Cargo.toml
@@ -20,6 +20,7 @@ splines = "4.3"
 [dev-dependencies]
 criterion = { version = "0.5", features = ["html_reports"] }
 rand = "0.8"
+rand_distr = "0.4"
 
 [[bench]]
 name = "bm3d_benchmarks"
