feat: Integrate multiscale BM3D processing and auto-sigma estimation into the GUI.

--- a/.gitignore
+++ b/.gitignore
@@ -166,3 +166,7 @@ dev*.ipynb
 # pixi environments
 .pixi/*
 !.pixi/config.toml
+# ignore experiments
+experiments/*
+# ignore reserach (local only)
+research/*
