--- a/pyproject.toml
+++ b/pyproject.toml
@@ -90,6 +90,8 @@ jupyter = ">=1.1.1,<2"
 hdf5 = ">=1.14.0"
 pkg-config = "*"
 scipy = ">=1.17.0,<2"
+scikit-learn = ">=1.8.0,<2"
+pywavelets = ">=1.9.0,<2"
 
 [tool.pixi.activation.env]
 HDF5_DIR = "$CONDA_PREFIX"
