--- a/src/rust_core/crates/bm3d_core/Cargo.toml
+++ b/src/rust_core/crates/bm3d_core/Cargo.toml
@@ -22,6 +22,7 @@ rustfft = { workspace = true }
 
 [dev-dependencies]
 criterion = { version = "0.5", features = ["html_reports"] }
+libc = "0.2"
 rand = "0.8"
 rand_distr = "0.4"
 
