Performance improvement for large image and switch to use FFT as default (#94)
* Implement tile-owned aggregation and benchmarking

* Optimize BM3D pipeline hot loops

* Optimize tile aggregation hot path

* Reuse worker buffers for BM3D patch processing

* Fuse inverse transform with aggregation buffers

* Add in-place forward transforms and reuse buffers

* Refactor BM3D config API and remove clippy suppressions

* Add memory benchmark example for BM3D artifact removal

* Default BM3D to FFT path and add GUI fast-mode toggle

* Optimize BM3D memory layout and tile finalization

* Optimize block matching inner loop distance evaluation

* Speed up block matching by removing norm-bound precheck

* Add BM3D profiling, transform cache, and faster sigma estimation

* Speed up auto sigma estimation with column sampling cap

* Speed up inverse FFT row stage and tile aggregation

* Optimize BM3D reference traversal and reuse plans across slices

* Optimize transform cache hashing and reduce per-slice allocations

* Reduce FFT allocation overhead and add volume sigma reuse option

* Reuse worker FFT plan scratch across BM3D transforms

* Hoist FFT scratch branching out of inner transform loops

* Stream stack BM3D output without intermediate result vec

* Reuse volume sigma by default for GUI auto-sigma mode

* Revert "Reuse volume sigma by default for GUI auto-sigma mode"

This reverts commit 08897ac2480cfc10c8c4c850f43210176dc6f26d.

* Accelerate auto sigma estimation with recursive vertical Gaussian

* Run inverse patch FFT in-place to cut transform copy overhead

* Speed up cache-miss patch FFT via strided-source fast path

* Replace transform hash-map cache with direct-mapped slot cache

* Batch 2D FFT row/column passes to cut transform overhead

* Optimize block matching with contiguous and 8x8 SSD fast paths

* Tune default aggregation tile size for better memory/runtime balance

* Guard zero-width sigma estimation path from Rayon chunk panic

* Add cross-platform SI

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "bm3dornl"
-version = "0.7.1"
+version = "0.8.0"
 description = "BM3D for streak artifact removal in neutron imaging"
 requires-python = ">=3.12"
 dependencies = [
@@ -20,7 +20,7 @@ documentation = "https://bm3dornl.readthedocs.io/en/latest/"
 issues = "https://github.com/ornlneutronimaging/bm3dornl/issues"
 
 [project.optional-dependencies]
-gui = ["bm3dornl-gui==0.7.1"]
+gui = ["bm3dornl-gui==0.8.0"]
 
 [build-system]
 requires = ["maturin>=1.0,<2.0"]
@@ -71,6 +71,9 @@ build = "maturin develop --release"
 test-rust = { cmd = "PYO3_USE_ABI3_FORWARD_COMPATIBILITY=1 cargo test --workspace", cwd = "src/rust_core" }
 test-python = "pytest"
 test = { depends-on = ["test-rust", "test-python"] }
+lint-fmt = { cmd = "cargo fmt --all --check", cwd = "src/rust_core" }
+lint-clippy = { cmd = "cargo clippy --workspace --all-targets -- -D warnings", cwd = "src/rust_core" }
+lint = { depends-on = ["lint-fmt", "lint-clippy"] }
 bench = "python benchmarks/measure_stack_speed.py"
 bench-rust = { cmd = "cargo bench -p bm3d_core", cwd = "src/rust_core" }
 clean = "cargo clean --manifest-path src/rust_core/Cargo.toml"
